# makeitraytrace

./: .gitignore  CMakeLists.txt  LICENSE  imgui.ini  makefile  readme
Shaders/: FragmentShader1.frag  FragmentShader2.frag  RaytracerCompute1.comp  VertexShader1.vert  VertexShader2.vert
include/: Camera.hpp  Canvas.hpp  Color4.hpp  CommonMacros.hpp  ComputeShaderProgram.hpp  Material.hpp  OpenGLLayer.hpp  PointLight.hpp  Ray.hpp  RayHit.hpp  Renderer.hpp  Scene.hpp  ShaderLoader.hpp  ShaderProgram.hpp  Sphere.hpp  Vec4.hpp  Window.hpp  main.hpp
include/glm/detail/: func_vector_relational.inl
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Camera.cpp  Canvas.cpp  Color4.cpp  ComputeShaderProgram.cpp  Material.cpp  OpenGLLayer.cpp  PointLight.cpp  Ray.cpp  RayHit.cpp  Renderer.cpp  Scene.cpp  ShaderLoader.cpp  ShaderProgram.cpp  Sphere.cpp  Vec4.cpp  Window.cpp  main.cpp
test/: test_Camera.cpp  test_Canvas.cpp  test_Color4.cpp  test_Material.cpp  test_Matrix4x4.cpp  test_PointLight.cpp  test_Ray.cpp  test_Renderer.cpp  test_Scene.cpp  test_Sphere.cpp  test_Vec4.cpp
